--- a/index.html
+++ b/index.html
@@ -21,18 +21,12 @@
 <!-- start menu -->
 <script src="js/bootstrap.min.js"></script>
 
-	<link rel="stylesheet" href="css/flexslider.css">
-	<script defer src="js/jquery.flexslider.js"></script>
 
   <script src="js/common.js"></script>
 
   
   <!-- animation-effect -->
-<link href="css/animate.min.css" rel="stylesheet"> 
-<script src="js/wow.min.js"></script>
-<script>
- new WOW().init();
-</script>
+
 <!-- //animation-effect -->
 </head>
 <body>
@@ -41,8 +35,8 @@
 
 <header>
  	
-
-		<div id="myCarousel" class="carousel">
+	<div class="stop">
+		<div id="myCarousel" class="carousel slide">
 			
 			<ol class="carousel-indicators">
 				<li data-target = "#myCarousel" data-slide-to = "0" class="active"></li>
@@ -79,7 +73,7 @@
 	
 			
 
-				<div class="col-sm-8 logo animated wow fadeInLeft" data-wow-delay=".5s">
+				<div class="col-sm-8 logo animated fadelnUp" data-wow-delay=".5s">
 					<h1><a href="index.html"><span>САкВоЯЖ</span> <br> </a></h1>	
 					<p> одежда <span class="man">для него</span> и <span class="wuman">для нее</span></p> 
 				</div>
