--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Качественная одежда, Итальянская одежда, недорогая одежда, недорогая одежда в Коломне, Купить свитер, Купить кофту, Магазин одежды в Коломне, " />
 
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
-<!-- start menu -->
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.bxslider.js"></script>
 <link rel="stylesheet" href="css/jquery.bxslider.css">	
 
+   <!-- animation-effect -->
+<link href="css/animate.min.css" rel="stylesheet"> 
+  
 
-  <script src="js/common.js"></script>
 
   
   <!-- animation-effect -->
@@ -308,11 +306,13 @@
 			<div class="col-sm-5 phonef numberf animated wow fadeInRight" data-wow-delay=".5s">
 					<span><i class="glyphicon glyphicon-phone"></i>+7 (965) 261 5551</span>
 					<p>Работаем с 9 до 19:00 <br> Без выходных</p>
-				</div>
-		
-				
+			</div>
 		</div>
 </div>
-<!--footer-->
+
+<!-- start menu -->
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.bxslider.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
