--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <!--theme-style-->
 
 <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+<link rel="shortcut icon" href="img/favicon.ico">
+
+	<link rel="stylesheet" href="js/font-awesome-4.7.0/css/font-awesome.min.css">
 
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,13 +79,16 @@
 <section>
 <div class="container">
 	
-<h2>У нас вы найдете одежду себе по вкусу</h2>
+<h2>У нас вы найдете</h2>
+<div class="down">
+<a href="#products"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
+</div>
 </div>
 </section>
 <!--//banner-->
 
 <!--content-->
-<div class="content">
+<div  id="products" 	class="content">
 	<div class="container">
 		<div class="content-top align">
 		
